fix slider visible bug

--- a/src/sass/blocks/_hidden-block.scss
+++ b/src/sass/blocks/_hidden-block.scss
@@ -1,12 +1,11 @@
 
 .hidden-block {
-    max-height: 90px;
-    overflow: hidden;
     margin-bottom: 16px;
 }
 
 @media (min-width: 768px) {
     .hidden-block {
         max-height: 175px;
+        overflow: hidden;
     }
 }
