--- a/src/sass/blocks/_slider.scss
+++ b/src/sass/blocks/_slider.scss
@@ -1,5 +1,4 @@
 .slider {
-	overflow: hidden;
 	&__card {
 		display: flex;
 		justify-content: space-between;
